main-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-exercises
  name: main-app-dep
spec:
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app
          image: eu.gcr.io/strax-dwk/main-app@sha256:bc483763520947bf6b04e39a12fc61d9969f9f8759af6be6f88839ad06410328
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 30
