main-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-exercises
  name: main-app-svc
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
