main-app/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: dwk-exercises
  name: pingpong-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: dwk-exercises
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/pingpong`)
      kind: Rule
      services:
        - name: pingpong-svc
          port: 80
      middlewares:
        - name: pingpong-stripprefix
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: main-app-svc
          port: 80
